--- a/styles.css
+++ b/styles.css
@@ -1218,7 +1218,27 @@ textarea {
   background-color: black;
 }
 
-.getInTouch .buttonContainer   {
+.buttonContainer {
   display: flex;
   justify-content: flex-end;
+}
+
+/* PARTNERS */
+
+.partners .picsContainer {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0rem 0rem 1.429rem 0rem;
+}
+
+.partners .picsContainer .picPartner {
+  width: 24%;
+  padding: 0.278rem;
+}
+
+.partners .picsContainer img {
+  width: 100%;
+  height: 100%;
 }
