--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,6 @@ header .enter h5 {
   border-radius: 50%;
   display: inline;
   background-color: black;
-  border: 3px solid white;
   /* only option for the transparent background? */
   /* ... maybe the easiest */
   background-color: rgba(0, 0, 0, 0.6);
@@ -1241,4 +1240,145 @@ textarea {
 .partners .picsContainer img {
   width: 100%;
   height: 100%;
+}
+
+/* SUMMARY */
+
+.summary {
+  background-color: #303030;
+}
+
+.summary .content {
+  display: flex;
+  text-align: left;
+  padding: 30px 0px;
+  padding: 1.667rem 0rem;
+  width: 100%;
+}
+
+.summary .section {
+  margin: 1.429rem 15px 0px 15px;
+  /* border: 0.048rem solid red; */
+  padding: 40px 30px 20px 30px;
+}
+
+.summary .section .sectionTitle {
+  margin: 10px auto 25px auto;
+  font-size: 0.889rem;
+  font-weight: 100;
+  letter-spacing: 0px;
+}
+
+.summary .sectionTitle {
+  color: white;
+}
+
+.summary p {
+  margin: 0px 0px 1.429rem 0px;
+  font-size: 15px;
+  line-height: 30px;
+  text-align: left;
+}
+
+.summary .agency {
+  width: 35%;
+  border-right: 0.048rem solid grey;
+}
+
+.summary .agency img {
+  width: 50%;
+}
+
+.summary .links {
+  width: 15%;
+  color: grey;
+  border-right: 0.048rem solid grey;
+}
+
+.summary .links .linksItems h4 {
+  color: inherit;
+  margin: 0px auto 20px auto;
+  font-size: 0.889rem;
+  font-weight: 100;
+  letter-spacing: 0px;
+}
+
+.summary .links .linksItems h4:hover {
+  color: goldenrod;
+  font-weight: 400;
+}
+
+.summary .links .linksItems h4:hover {
+  color: goldenrod;
+  font-weight: 400;
+}
+
+.summary .twitter {
+  width: 20%;
+  border-right: 0.048rem solid grey;
+}
+
+.summary .twitter a:hover {
+  color: goldenrod;
+  /* font-weight: 400; */
+}
+
+.summary .twit .date img {
+  width: 5%;
+  display: inline-block;
+  margin: 0px 5px 0px 0px;
+}
+
+.summary .twit .date p {
+  display: inline-block;
+  color: darkgray;
+}
+
+.summary .instagram {
+  width: 30%;
+  /* border: 0.048rem solid red; */
+}
+
+.summary .instagram .picsContainer {
+  /* width: 100%; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  position: relative;
+}
+
+.summary .instagram .pic {
+  /* border: 3px solid salmon; */
+  width: 25%;
+  margin: 10px 10px;
+  position: relative;
+}
+
+.summary .instagram .pic img {
+  width: 100%;
+  height: 100%;
+}
+
+.summary .instagram .pic .overlay {
+  position: absolute;
+  top: 0rem;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  height: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: goldenrod;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.summary .instagram .pic .overlay img {
+  width: 30%;
+  height: 30%;
+}
+
+.summary .instagram .pic:hover .overlay {
+  opacity: 1;
 }
